fix(textarea): fix error-text wrap implementation

--- a/packages/styles/scss/components/text-area/_text-area.scss
+++ b/packages/styles/scss/components/text-area/_text-area.scss
@@ -61,10 +61,6 @@
     background-color: $field-02;
   }
 
-  .#{$prefix}--text-area--invalid {
-    padding-inline-end: $spacing-08;
-  }
-
   .#{$prefix}--text-area__wrapper {
     @include layout.use('density', $default: 'normal');
 
@@ -246,13 +242,5 @@
     display: flex;
     justify-content: space-between;
     inline-size: 100%;
-  }
-
-  .#{$prefix}--form-item:has(.#{$prefix}--text-area) {
-    position: relative;
-    .#{$prefix}--form-requirement {
-      position: absolute;
-      inset-block-start: 100%;
-    }
   }
 }
