--- a/packages/web-components/src/components/textarea/textarea.scss
+++ b/packages/web-components/src/components/textarea/textarea.scss
@@ -13,7 +13,6 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/utilities/ai-gradient' as *;
 
 :host(#{$prefix}-textarea) {
-  position: relative;
   @include emit-layout-tokens();
 
   outline: none;
@@ -41,10 +40,6 @@ $css--plex: true !default;
 
 :host(#{$prefix}-textarea[warn]),
 :host(#{$prefix}-textarea[invalid]) {
-  .#{$prefix}--form-requirement {
-    position: absolute;
-    inset-block-start: auto;
-  }
   .#{$prefix}--text-area__wrapper--decorator {
     .#{$prefix}--text-area {
       padding-inline-end: $spacing-10;
